[package]
name = "nutmeg_client"
version = "0.3.0"
edition = "2021"

[lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.8.0" }
bevy_egui = { version = "0.15", default-features = false, features = ["open_url", "default_fonts"] }
# eframe = { version = "0.18.0", features = ["persistence"] }
# egui = "0.18.1"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = "0.2.82"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# # web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[dev-dependencies]
bevy = { version = "0.8.0", default-features = false, features = ["x11", "bevy_winit"] }
