[package]
name = "nutmeg_core"
version = { workspace = true }
edition = "2021"

[dependencies]
bevy = { version = "0.8.0" }
bevy_egui = { version = "0.15", default-features = false, features = ["open_url", "default_fonts"] }
bevy_rapier2d = { version = "0.16.1", features = ["simd-nightly"] }
# eframe = { version = "0.18.0", features = ["persistence"] }
# egui = "0.18.1"
rand = "0.8.5"
indexmap = { version = "1.9.1", features = ["std"] }
